<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    tools:context=".ui.activities.SettingsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/fl_header_bg"
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <ImageView
                android:id="@+id/iv_header_bg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/content_description"
                android:scaleType="fitXY"
                android:src="@drawable/mamma_m_kitchen_auth" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_settings_activity"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingStart="@dimen/toolbar_title_paddingStart"
                    android:paddingEnd="0dp"
                    android:text="@string/title_settings"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/toolbar_title_text_size"
                    android:textStyle="bold" />

            </androidx.appcompat.widget.Toolbar>
        </FrameLayout>

        <com.makaota.mammamskitchenmanager.utils.RAMTextView
            android:id="@+id/tv_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fl_header_bg"
            android:layout_alignParentEnd="true"
            android:layout_margin="16dp"
            android:background="@drawable/item_grey_border_background"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:paddingStart="@dimen/settings_edit_label_marginStartEnd"
            android:paddingTop="@dimen/settings_edit_label_marginTopBottom"
            android:paddingEnd="@dimen/settings_edit_label_marginStartEnd"
            android:paddingBottom="@dimen/settings_edit_label_marginTopBottom"
            android:text="@string/lbl_edit"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/settings_edit_label_textSize" />

        <com.makaota.mammamskitchenmanager.utils.RAMTextViewBold
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_edit"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/settings_name_marginTop"
            android:textColor="@color/colorDarkGrey"
            android:textSize="@dimen/settings_name_textSize"
            tools:text="Papi Makaota" />

        <com.makaota.mammamskitchenmanager.utils.RAMTextView
            android:id="@+id/tv_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/settings_info_marginTop"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/settings_info_textSize"
            tools:text="Male" />

        <com.makaota.mammamskitchenmanager.utils.RAMTextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_gender"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/settings_info_marginTop"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/settings_info_textSize"
            tools:text="sa.makaota@gmail.com" />

        <com.makaota.mammamskitchenmanager.utils.RAMButton
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_email"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/settings_button_marginStartEnd"
            android:layout_marginTop="@dimen/settings_button_marginTopBottom"
            android:layout_marginEnd="@dimen/settings_button_marginStartEnd"
            android:layout_marginBottom="@dimen/settings_button_marginTopBottom"
            android:background="@drawable/button_background"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingTop="@dimen/btn_padding"
            android:paddingBottom="@dimen/btn_padding"
            android:text="@string/btn_lbl_logout"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/btn_textSize" />

    </RelativeLayout>
</ScrollView>